--- a/config/crds/resources/apiextensions.k8s.io_v1_customresourcedefinition_storagebuckets.storage.cnrm.cloud.google.com.yaml
+++ b/config/crds/resources/apiextensions.k8s.io_v1_customresourcedefinition_storagebuckets.storage.cnrm.cloud.google.com.yaml
@@ -346,6 +346,263 @@ spec:
                       type: string
                   type: object
                 type: array
+              lastReconciledState:
+                properties:
+                  autoclass:
+                    description: The bucket's autoclass configuration.
+                    properties:
+                      enabled:
+                        description: While set to true, autoclass automatically transitions
+                          objects in your bucket to appropriate storage classes based
+                          on each object's access pattern.
+                        type: boolean
+                    required:
+                    - enabled
+                    type: object
+                  cors:
+                    description: The bucket's Cross-Origin Resource Sharing (CORS)
+                      configuration.
+                    items:
+                      properties:
+                        maxAgeSeconds:
+                          description: The value, in seconds, to return in the Access-Control-Max-Age
+                            header used in preflight responses.
+                          type: integer
+                        method:
+                          description: 'The list of HTTP methods on which to include
+                            CORS response headers, (GET, OPTIONS, POST, etc) Note:
+                            "*" is permitted in the list of methods, and means "any
+                            method".'
+                          items:
+                            type: string
+                          type: array
+                        origin:
+                          description: 'The list of Origins eligible to receive CORS
+                            response headers. Note: "*" is permitted in the list of
+                            origins, and means "any Origin".'
+                          items:
+                            type: string
+                          type: array
+                        responseHeader:
+                          description: The list of HTTP headers other than the simple
+                            response headers to give permission for the user-agent
+                            to share across domains.
+                          items:
+                            type: string
+                          type: array
+                      type: object
+                    type: array
+                  customPlacementConfig:
+                    description: The bucket's custom location configuration, which
+                      specifies the individual regions that comprise a dual-region
+                      bucket. If the bucket is designated a single or multi-region,
+                      the parameters are empty.
+                    properties:
+                      dataLocations:
+                        description: 'Immutable. The list of individual regions that
+                          comprise a dual-region bucket. See the docs for a list of
+                          acceptable regions. Note: If any of the data_locations changes,
+                          it will recreate the bucket.'
+                        items:
+                          type: string
+                        type: array
+                    required:
+                    - dataLocations
+                    type: object
+                  defaultEventBasedHold:
+                    description: Whether or not to automatically apply an eventBasedHold
+                      to new objects added to the bucket.
+                    type: boolean
+                  encryption:
+                    description: The bucket's encryption configuration.
+                    properties:
+                      defaultKmsKeyName:
+                        description: A Cloud KMS key that will be used to encrypt
+                          objects inserted into this bucket, if no encryption method
+                          is specified. You must pay attention to whether the crypto
+                          key is available in the location that this bucket is created
+                          in. See the docs for more details.
+                        type: string
+                    required:
+                    - defaultKmsKeyName
+                    type: object
+                  forceDestroy:
+                    type: boolean
+                  labels:
+                    additionalProperties:
+                      type: string
+                    description: A set of key/value label pairs to assign to the bucket.
+                    type: object
+                  lifecycleRule:
+                    description: The bucket's Lifecycle Rules configuration.
+                    items:
+                      properties:
+                        action:
+                          description: The Lifecycle Rule's action configuration.
+                            A single block of this type is supported.
+                          properties:
+                            storageClass:
+                              description: 'The target Storage Class of objects affected
+                                by this Lifecycle Rule. Supported values include:
+                                MULTI_REGIONAL, REGIONAL, NEARLINE, COLDLINE, ARCHIVE.'
+                              type: string
+                            type:
+                              description: 'The type of the action of this Lifecycle
+                                Rule. Supported values include: Delete, SetStorageClass
+                                and AbortIncompleteMultipartUpload.'
+                              type: string
+                          required:
+                          - type
+                          type: object
+                        condition:
+                          description: The Lifecycle Rule's condition configuration.
+                          properties:
+                            age:
+                              description: Minimum age of an object in days to satisfy
+                                this condition.
+                              type: integer
+                            createdBefore:
+                              description: Creation date of an object in RFC 3339
+                                (e.g. 2017-06-13) to satisfy this condition.
+                              type: string
+                            customTimeBefore:
+                              description: Creation date of an object in RFC 3339
+                                (e.g. 2017-06-13) to satisfy this condition.
+                              type: string
+                            daysSinceCustomTime:
+                              description: Number of days elapsed since the user-specified
+                                timestamp set on an object.
+                              type: integer
+                            daysSinceNoncurrentTime:
+                              description: "Number of days elapsed since the noncurrent
+                                timestamp of an object. This\n\t\t\t\t\t\t\t\t\t\tcondition
+                                is relevant only for versioned objects."
+                              type: integer
+                            matchesPrefix:
+                              description: One or more matching name prefixes to satisfy
+                                this condition.
+                              items:
+                                type: string
+                              type: array
+                            matchesStorageClass:
+                              description: 'Storage Class of objects to satisfy this
+                                condition. Supported values include: MULTI_REGIONAL,
+                                REGIONAL, NEARLINE, COLDLINE, ARCHIVE, STANDARD, DURABLE_REDUCED_AVAILABILITY.'
+                              items:
+                                type: string
+                              type: array
+                            matchesSuffix:
+                              description: One or more matching name suffixes to satisfy
+                                this condition.
+                              items:
+                                type: string
+                              type: array
+                            noncurrentTimeBefore:
+                              description: Creation date of an object in RFC 3339
+                                (e.g. 2017-06-13) to satisfy this condition.
+                              type: string
+                            numNewerVersions:
+                              description: Relevant only for versioned objects. The
+                                number of newer versions of an object to satisfy this
+                                condition.
+                              type: integer
+                            withState:
+                              description: 'Match to live and/or archived objects.
+                                Unversioned buckets have only live objects. Supported
+                                values include: "LIVE", "ARCHIVED", "ANY".'
+                              type: string
+                          type: object
+                      required:
+                      - action
+                      - condition
+                      type: object
+                    type: array
+                  location:
+                    description: Immutable. The Google Cloud Storage location.
+                    type: string
+                  logging:
+                    description: The bucket's Access & Storage Logs configuration.
+                    properties:
+                      logBucket:
+                        description: The bucket that will receive log objects.
+                        type: string
+                      logObjectPrefix:
+                        description: The object prefix for log objects. If it's not
+                          provided, by default Google Cloud Storage sets this to this
+                          bucket's name.
+                        type: string
+                    required:
+                    - logBucket
+                    type: object
+                  project:
+                    description: Immutable. The ID of the project in which the resource
+                      belongs. If it is not provided, the provider project is used.
+                    type: string
+                  publicAccessPrevention:
+                    description: Prevents public access to a bucket.
+                    type: string
+                  requesterPays:
+                    description: Enables Requester Pays on a storage bucket.
+                    type: boolean
+                  resourceID:
+                    description: Immutable. Optional. The name of the resource. Used
+                      for creation and acquisition. When unset, the value of `metadata.name`
+                      is used as the default.
+                    type: string
+                  retentionPolicy:
+                    description: Configuration of the bucket's data retention policy
+                      for how long objects in the bucket should be retained.
+                    properties:
+                      isLocked:
+                        description: 'If set to true, the bucket will be locked and
+                          permanently restrict edits to the bucket''s retention policy.  Caution:
+                          Locking a bucket is an irreversible action.'
+                        type: boolean
+                      retentionPeriod:
+                        description: The period of time, in seconds, that objects
+                          in the bucket must be retained and cannot be deleted, overwritten,
+                          or archived. The value must be less than 3,155,760,000 seconds.
+                        type: integer
+                    required:
+                    - retentionPeriod
+                    type: object
+                  selfLink:
+                    description: The URI of the created resource.
+                    type: string
+                  storageClass:
+                    description: 'The Storage Class of the new bucket. Supported values
+                      include: STANDARD, MULTI_REGIONAL, REGIONAL, NEARLINE, COLDLINE,
+                      ARCHIVE.'
+                    type: string
+                  uniformBucketLevelAccess:
+                    description: Enables uniform bucket-level access on a bucket.
+                    type: boolean
+                  url:
+                    description: The base URL of the bucket, in the format gs://<bucket-name>.
+                    type: string
+                  versioning:
+                    description: The bucket's Versioning configuration.
+                    properties:
+                      enabled:
+                        description: While set to true, versioning is fully enabled
+                          for this bucket.
+                        type: boolean
+                    required:
+                    - enabled
+                    type: object
+                  website:
+                    description: Configuration if the bucket acts as a website.
+                    properties:
+                      mainPageSuffix:
+                        description: Behaves as the bucket's directory index where
+                          missing objects are treated as potential directories.
+                        type: string
+                      notFoundPage:
+                        description: The custom object to return when a requested
+                          resource is not found.
+                        type: string
+                    type: object
+                type: object
               observedGeneration:
                 description: ObservedGeneration is the generation of the resource
                   that was most recently observed by the Config Connector controller.
