Fix reference docs

--- a/config/crds/resources/apiextensions.k8s.io_v1_customresourcedefinition_computedisks.compute.cnrm.cloud.google.com.yaml
+++ b/config/crds/resources/apiextensions.k8s.io_v1_customresourcedefinition_computedisks.compute.cnrm.cloud.google.com.yaml
@@ -317,12 +317,11 @@ spec:
                     type: string
                 type: object
               interface:
-                description: DEPRECATED. `interface` is deprecated and will be removed
-                  in a future major release. This field is no longer used and can
-                  be safely removed from your configurations; disk interfaces are
-                  automatically determined on attachment. Immutable. Specifies the
-                  disk interface to use for attaching this disk, which is either SCSI
-                  or NVME. The default is SCSI.
+                description: DEPRECATED. `interface` is deprecated. This field is
+                  no longer used and can be safely removed from your configurations;
+                  disk interfaces are automatically determined on attachment. Immutable.
+                  Specifies the disk interface to use for attaching this disk, which
+                  is either SCSI or NVME. The default is SCSI.
                 type: string
               licenses:
                 description: Immutable. Any applicable license URI.
