--- a/config/crds/resources/apiextensions.k8s.io_v1_customresourcedefinition_certificatemanagercertificates.certificatemanager.cnrm.cloud.google.com.yaml
+++ b/config/crds/resources/apiextensions.k8s.io_v1_customresourcedefinition_certificatemanagercertificates.certificatemanager.cnrm.cloud.google.com.yaml
@@ -100,7 +100,7 @@ spec:
                     items:
                       description: Authorizations that will be used for performing
                         domain authorization. Either issuanceConfig or dnsAuthorizations
-                        should be specificed, but not both.
+                        should be specified, but not both.
                       oneOf:
                       - not:
                           required:
@@ -142,7 +142,7 @@ spec:
 
                       Immutable. The resource name for a CertificateIssuanceConfig used to configure private PKI certificates in the format projects/*/locations/*/certificateIssuanceConfigs/*.
                       If this field is not set, the certificates will instead be publicly signed as documented at https://cloud.google.com/load-balancing/docs/ssl-certificates/google-managed-certs#caa.
-                      Either issuanceConfig or dnsAuthorizations should be specificed, but not both.
+                      Either issuanceConfig or dnsAuthorizations should be specified, but not both.
                     oneOf:
                     - not:
                         required:
@@ -243,7 +243,7 @@ spec:
                 properties:
                   certificatePem:
                     description: |-
-                      DEPRECATED. `certificate_pem` is deprecated and will be removed in a future major release. Use `pem_certificate` instead. Immutable. The certificate chain in PEM-encoded form.
+                      DEPRECATED. `certificate_pem` is deprecated. Use `pem_certificate` instead. Immutable. The certificate chain in PEM-encoded form.
 
                       Leaf certificate comes first, followed by intermediate ones if any.
                     oneOf:
@@ -330,10 +330,9 @@ spec:
                         type: object
                     type: object
                   privateKeyPem:
-                    description: DEPRECATED. `private_key_pem` is deprecated and will
-                      be removed in a future major release. Use `pem_private_key`
-                      instead. Immutable. The private key of the leaf certificate
-                      in PEM-encoded form.
+                    description: DEPRECATED. `private_key_pem` is deprecated. Use
+                      `pem_private_key` instead. Immutable. The private key of the
+                      leaf certificate in PEM-encoded form.
                     oneOf:
                     - not:
                         required:
@@ -495,7 +494,7 @@ spec:
                     items:
                       description: Authorizations that will be used for performing
                         domain authorization. Either issuanceConfig or dnsAuthorizations
-                        should be specificed, but not both.
+                        should be specified, but not both.
                       oneOf:
                       - not:
                           required:
@@ -537,7 +536,7 @@ spec:
 
                       Immutable. The resource name for a CertificateIssuanceConfig used to configure private PKI certificates in the format projects/*/locations/*/certificateIssuanceConfigs/*.
                       If this field is not set, the certificates will instead be publicly signed as documented at https://cloud.google.com/load-balancing/docs/ssl-certificates/google-managed-certs#caa.
-                      Either issuanceConfig or dnsAuthorizations should be specificed, but not both.
+                      Either issuanceConfig or dnsAuthorizations should be specified, but not both.
                     oneOf:
                     - not:
                         required:
@@ -638,7 +637,7 @@ spec:
                 properties:
                   certificatePem:
                     description: |-
-                      DEPRECATED. `certificate_pem` is deprecated and will be removed in a future major release. Use `pem_certificate` instead. Immutable. The certificate chain in PEM-encoded form.
+                      DEPRECATED. `certificate_pem` is deprecated. Use `pem_certificate` instead. Immutable. The certificate chain in PEM-encoded form.
 
                       Leaf certificate comes first, followed by intermediate ones if any.
                     oneOf:
@@ -725,10 +724,9 @@ spec:
                         type: object
                     type: object
                   privateKeyPem:
-                    description: DEPRECATED. `private_key_pem` is deprecated and will
-                      be removed in a future major release. Use `pem_private_key`
-                      instead. Immutable. The private key of the leaf certificate
-                      in PEM-encoded form.
+                    description: DEPRECATED. `private_key_pem` is deprecated. Use
+                      `pem_private_key` instead. Immutable. The private key of the
+                      leaf certificate in PEM-encoded form.
                     oneOf:
                     - not:
                         required:
