--- a/.github/workflows/upgrade-operator.yaml
+++ b/.github/workflows/upgrade-operator.yaml
@@ -17,7 +17,7 @@ name: Upgrade Operator
 on:
   push:
     branches: [ "master" ]
-    tags: [ "v1.[0-9]+.[0-9]+" ]
+#    tags: [ "v1.[0-9]+.[0-9]+" ]
 
 jobs:
   upgrade:
