--- a/.github/workflows/upgrade-operator.yaml
+++ b/.github/workflows/upgrade-operator.yaml
@@ -18,7 +18,7 @@ on:
   push:
     branches: [ "202312-github-action" ]
 #    branches: [ "master" ]
-#    tags: [ "v1.[0-9]+.[0-9]+" ]
+    tags: [ "v1.[0-9]+.[0-9]+" ]
 
 jobs:
   upgrade:
@@ -34,7 +34,16 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: "1.21.5"
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: "Test version"
+        run: |
+          echo $RELEASE_VERSION
+          echo ${{ env.RELEASE_VERSION }}
       - name: "Run make upgrade-kcc"
         run: |
           cd ./src/k8s-config-connector/operator
           make upgrade-kcc
+          git add .
+          git commit -m "Upgrade KCC operator to version ${{ env.RELEASE_VERSION }} "
+          git log --oneline
