--- a/.github/workflows/upgrade-operator.yaml
+++ b/.github/workflows/upgrade-operator.yaml
@@ -16,6 +16,7 @@ name: Upgrade Operator
 
 on:
   push:
+    branches: [ "202312-github-action" ]
     # The action is only triggered when a new tag following the current
     # convention is created.
     tags: [ "v1.[0-9]+.[0-9]+" ]
@@ -39,7 +40,9 @@ jobs:
 #        run: exit -1
       - name: Exit if not on 202312-github-action branch
         if: endsWith(github.ref, '202312-github-action') == false
-        run: exit -1
+        run: |
+          echo ${{ github.ref }}
+          exit -1
       - name: Set env
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: "Test version"
