--- a/.github/workflows/upgrade-operator.yaml
+++ b/.github/workflows/upgrade-operator.yaml
@@ -53,6 +53,8 @@ jobs:
         run: |
           cd ./src/k8s-config-connector/operator
           make upgrade-kcc
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
           git add .
           git commit -m "Upgrade KCC operator to version ${{ env.RELEASE_VERSION }} "
           git log --oneline
