--- a/.github/workflows/upgrade-operator.yaml
+++ b/.github/workflows/upgrade-operator.yaml
@@ -28,8 +28,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          # This is introduced to make sure 'go generate' works properly???
-          path: "src/k8s-config-connector"
+#          # This is introduced to make sure 'go generate' works properly???
+#          path: "src/k8s-config-connector"
           # This is to get all the commits in order to validate them
           fetch-depth: 0
       - uses: actions/setup-go@v4
@@ -53,20 +53,21 @@ jobs:
           echo ${{ env.RELEASE_VERSION }}
       - name: "Run make upgrade-kcc"
         run: |
-          cd ./src/k8s-config-connector/operator
-          make upgrade-kcc
+          cd ./src/k8s-config-connector
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
+          git branch
+          make -C operator upgrade-kcc
           git diff
           git add .
           git commit -m "Upgrade KCC operator to version ${{ env.RELEASE_VERSION }}"
           git remote add target https://github.com/maqiuyujoyce/k8s-config-connector.git
           git remote -vv
           export LOCAL_BRANCH=$(git rev-parse --abbrev-ref HEAD)
-          echo ${LOCAL_BRANCH}
+          echo "LOCAL_BRANCH: ${LOCAL_BRANCH}"
           export REMOTE_BRANCH=202312-test-pr-creation-$(date +"%s")
-          echo ${REMOTE_BRANCH}
-          git push target ${LOCAL_BRANCH}:${REMOTE_BRANCH}
+          echo "REMOTE_BRANCH: ${REMOTE_BRANCH}"
+          git push target HEAD:${REMOTE_BRANCH}
           gh repo set-default maqiuyujoyce/k8s-config-connector
           gh pr create --head ${REMOTE_BRANCH} --title 'Upgrade KCC operator to version ${{ env.RELEASE_VERSION }}' --body 'Upgrade KCC operator to version ${{ env.RELEASE_VERSION }}.'
         env:
