--- a/.github/workflows/upgrade-operator.yaml
+++ b/.github/workflows/upgrade-operator.yaml
@@ -28,29 +28,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-#          # This is introduced to make sure 'go generate' works properly???
-#          path: "src/k8s-config-connector"
-          # This is to get all the commits in order to validate them
+          # This is to get all the commits.
           fetch-depth: 0
       - uses: actions/setup-go@v4
         with:
           go-version: "1.21.5"
-#      - name: Exit if not on master branch
-#        if: endsWith(github.ref, 'master') == false
-#        run: exit -1
-#      # Doesn't work if triggered by tag creation!!!
-#      - name: Exit if not on 202312-github-action branch
-#        if: endsWith(github.ref, '202312-github-action') == false
-#        run: |
-#          echo ${{ github.ref }}
-#          exit -1
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-      # No need. Remove before PR creation!!!
-      - name: "Test version"
+      - name: "Set env"
         run: |
-          echo $RELEASE_VERSION
-          echo ${{ env.RELEASE_VERSION }}
+          echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+          echo "env.RELEASE_VERSION: ${{ env.RELEASE_VERSION }}"
       - name: "Upgrade KCC operator"
         run: |
           git config user.name "GitHub Actions Bot"
