--- a/.github/workflows/upgrade-operator.yaml
+++ b/.github/workflows/upgrade-operator.yaml
@@ -37,7 +37,7 @@ jobs:
         run: |
           echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
           echo "env.RELEASE_VERSION: ${{ env.RELEASE_VERSION }}"
-      - name: "Upgrade KCC operator"
+      - name: "Upgrade operator"
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
@@ -56,13 +56,12 @@ jobs:
           echo "Adding a remote pointing to GoogleCloudPlatform/k8s-config-connector..."
           git remote add target https://github.com/maqiuyujoyce/k8s-config-connector.git
           git remote -vv
-          export LOCAL_BRANCH=$(git rev-parse --abbrev-ref HEAD)
-          echo "LOCAL_BRANCH: ${LOCAL_BRANCH}"
-          export REMOTE_BRANCH=202312-test-pr-creation-$(date +"%s")
-          echo "REMOTE_BRANCH: ${REMOTE_BRANCH}"
-          echo "Creating the PR..."
-          git push target HEAD:${REMOTE_BRANCH}
+          export BRANCH=operator-upgrade-$(date +"%Y%m%d%H%M%S")
+          echo "Setting up branch '${BRANCH}'..."
+          git checkout -b ${BRANCH}
+          echo "Creating the PR against master branch of GoogleCloudPlatform/k8s-config-connector..."
+          git push -u target ${BRANCH}
           gh repo set-default maqiuyujoyce/k8s-config-connector
-          gh pr create --head ${REMOTE_BRANCH} --title 'Upgrade KCC operator to version ${{ env.RELEASE_VERSION }}' --body 'Upgrade KCC operator to version ${{ env.RELEASE_VERSION }}.'
+          gh pr create --head ${BRANCH} --title 'Upgrade KCC operator to version ${{ env.RELEASE_VERSION }}' --body 'Upgrade KCC operator to version ${{ env.RELEASE_VERSION }}.'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
