--- a/.github/workflows/upgrade-operator.yaml
+++ b/.github/workflows/upgrade-operator.yaml
@@ -37,6 +37,11 @@ jobs:
         run: |
           echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
           echo "env.RELEASE_VERSION: ${{ env.RELEASE_VERSION }}"
+      # ${{ env.RELEASE_VERSION }} is not accessible in the same step when it is
+      # set?
+      - name: "Verify release version"
+        run: |
+          echo "env.RELEASE_VERSION: ${{ env.RELEASE_VERSION }}"
       - name: "Upgrade operator"
         run: |
           git config user.name "GitHub Actions Bot"
