--- a/.github/workflows/upgrade-operator.yaml
+++ b/.github/workflows/upgrade-operator.yaml
@@ -53,7 +53,7 @@ jobs:
           git branch
       - name: "Upgrade KCC operator"
         run: |
-          echo ""Running 'make upgrade-kcc'..."
+          echo "Running 'make upgrade-kcc'..."
           make -C operator upgrade-kcc
           echo "Ensuring there is diff and committing the change..."
           git diff
