--- a/.github/workflows/upgrade-operator.yaml
+++ b/.github/workflows/upgrade-operator.yaml
@@ -38,14 +38,12 @@ jobs:
           echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       # ${{ env.RELEASE_VERSION }} is not accessible in the same step when it is
       # set.
-      - name: "Verify release version"
-        run: |
-          echo "env.RELEASE_VERSION: ${{ env.RELEASE_VERSION }}"
       - name: "Check current state"
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
           echo "Checking the current state..."
+          echo "Release version: ${{ env.RELEASE_VERSION }}"
           echo "Location: $(pwd)"
           echo "Commit history:"
           git log --oneline -10
