--- a/.github/workflows/upgrade-operator.yaml
+++ b/.github/workflows/upgrade-operator.yaml
@@ -55,6 +55,9 @@ jobs:
           make -C operator upgrade-kcc
           echo "Ensuring there is diff and committing the change..."
           git diff
+          if [[ `git status --porcelain` ]]; then
+            exit 1
+          fi
           git add .
           git commit -m "Upgrade KCC operator to version ${{ env.RELEASE_VERSION }}"
       - name: "Create PR"
